--- a/css/webmrbc.css
+++ b/css/webmrbc.css
@@ -29,28 +29,6 @@ html {
 	width: 25%;
 }
 
-.left-pane {
-	position: relative;
-	height: 100%;
-	float: left;
-	margin-left: -100%;
-}
-
-.right-pane {
-	position: relative;
-	height: 100%;
-	width: 100%;
-	float: left;
-}
-
-#term {
-	width: 100%;
-}
-
-#output{
-	width: 100%;
-}
-
 #main-menu {
 	margin-bottom: 0px;
 }
@@ -70,186 +48,193 @@ html {
 
 	#modes-container .modes-tab-pane {
 		position: relative;
-		height: 98%;
+		height: 100%;
 	}
 
-		#modes-container .modes-tab-pane #block-tab-left-pane {
-			width: 200px;
+#selectors-container {
+	position: absolute;
+	margin-left: 20px;
+	width: 200px;
+	height: 100%;
+	overflow: hidden;
+}
+
+	#selectors-container ul.nav-pills {
+		margin: 0 0 4px 0;
+		font-size: 0.8em;
+		line-height: 1em;
+	}
+
+		#selectors-container ul.nav-pills li {
+			line-height: 12px;
 		}
 
-			#modes-container .modes-tab-pane #block-tab-left-pane #selectors-container {
-				position: relative;
-				margin-left: 20px;
-				width: 160px;
-				height: 100%;
-				overflow: hidden;
+			#selectors-container ul.nav-pills li a {
+				margin-right: 2px;
+				margin-top: 2px;
+				margin-bottom: 2px;
+				padding-top: 8px;
+				padding-bottom: 8px;
+				padding-right: 5px;
+				padding-left: 5px;
+				line-height: 12px;
 			}
 
-				#modes-container .modes-tab-pane #block-tab-left-pane #selectors-container ul.nav-pills {
-					margin: 0 0 4px 0;
-					font-size: 0.8em;
-					line-height: 1em;
-				}
+#selectors-tab-content {
+	position: absolute;
+	top: 32px;
+	left: 0;
+	right: 0;
+	bottom: -2px;
+	overflow-y: scroll;
+}
 
-					#modes-container .modes-tab-pane #block-tab-left-pane #selectors-container ul.nav-pills li {
-						line-height: 12px;
-					}
+	#selectors-tab-content .selector-tab .item {
+		position: relative;
+	}
 
-						#modes-container .modes-tab-pane #block-tab-left-pane #selectors-container ul.nav-pills li a {
-							margin-right: 2px;
-							margin-top: 2px;
-							margin-bottom: 2px;
-							padding-top: 8px;
-							padding-bottom: 8px;
-							padding-right: 5px;
-							padding-left: 5px;
-							line-height: 12px;
-						}
-
-				#modes-container .modes-tab-pane #block-tab-left-pane #selectors-container #selectors-tab-content {
-					position: absolute;
-					width: 180px;
-					top: 32px;
-					left: 0;
-					right: 0;
-					bottom: -2px;
-					overflow-y: scroll;
-				}
-
-					#modes-container .modes-tab-pane #block-tab-left-pane #selectors-container #selectors-tab-content .selector-tab .item {
-						position: relative;
-						width: 160px;
-						height: 160px;
-					}
-
-						#modes-container .modes-tab-pane #block-tab-left-pane #selectors-container #selectors-tab-content .selector-tab .item a {
-							text-decoration: none;
-							cursor: pointer;
-							font-size: 1.5em;
-							vertical-align: middle;
-							display: table-cell;
-						}
-
-						#modes-container .modes-tab-pane #block-tab-left-pane #selectors-container #selectors-tab-content .selector-tab .item .item-info {
-							position: absolute;
-							left: 0;
-							top: 0;
-							right: 0;
-							bottom: 0;
-							width: 160px;
-							height: 160px;
-							color: gray;
-						}
-
-							#modes-container .modes-tab-pane #block-tab-left-pane #selectors-container #selectors-tab-content .selector-tab .item .item-info .name {
-								position: absolute;
-								left: 10px;
-								top: 10px;
-								font-size: 1em;
-								z-index: 1;
-							}
-
-							#modes-container .modes-tab-pane #block-tab-left-pane #selectors-container #selectors-tab-content .selector-tab .item .item-info .attributes {
-								position: absolute;
-								left: 10px;
-								bottom: 10px;
-								font-size: 0.8em;
-								line-height: 1.1em;
-								text-align: left;
-								z-index: 1;
-							}
-
-							#modes-container .modes-tab-pane #block-tab-left-pane #selectors-container #selectors-tab-content .selector-tab .item .item-info a.modify-button {
-								position: absolute;
-								right: 10px;
-								bottom: 10px;
-								padding-left: 0.5em;
-								padding-top: 0.5em;
-								font-size: 1.5em;
-								z-index: 1;
-							}
-
-							#modes-container .modes-tab-pane #block-tab-left-pane #selectors-container #selectors-tab-content .selector-tab .item .item-info .topright-buttons {
-								position: absolute;
-								right: 10px;
-								top: 10px;
-								padding-left: 0.5em;
-								padding-bottom: 0.5em;
-								z-index: 1;
-							}
-
-							#modes-container .modes-tab-pane #block-tab-left-pane #selectors-container #selectors-tab-content .selector-tab .item .item-info .topright-buttons > a {
-								font-size: 1.5em;
-							}
-
-						#modes-container .modes-tab-pane #block-tab-left-pane #selectors-container #selectors-tab-content .selector-tab .item a.eobject {
-							position: relative;
-							overflow: hidden;
-							display: table-cell;
-							text-align: center;
-							vertical-align: middle;
-							width: 160px;
-							height: 160px;
-							border: 5px solid white;
-						}
-
-							#modes-container .modes-tab-pane #block-tab-left-pane #selectors-container #selectors-tab-content .selector-tab .item a.eobject img, #modes-container .modes-tab-pane #block-tab-left-pane #selectors-container #selectors-tab-content .selector-tab .item a.eobject div {
-								margin: -5px;
-							}
-
-							#modes-container .modes-tab-pane #block-tab-left-pane #selectors-container #selectors-tab-content .selector-tab .item a.eobject img {
-								max-width: 160px;
-								max-height: 160px;
-							}
-
-							#modes-container .modes-tab-pane #block-tab-left-pane #selectors-container #selectors-tab-content .selector-tab .item a.eobject:hover {
-								border: 5px solid #0088cc;
-							}
-
-						#modes-container .modes-tab-pane #block-tab-left-pane #selectors-container #selectors-tab-content .selector-tab .item a#add-eobject-button.eobject {
-							text-align: center;
-							vertical-align: middle;
-							font-size: 1em;
-							border: 5px dashed lightgrey;
-						}
-
-							#modes-container .modes-tab-pane #block-tab-left-pane #selectors-container #selectors-tab-content .selector-tab .item a#add-eobject-button.eobject i {
-								font-size: 2em;
-							}
-
-							#modes-container .modes-tab-pane #block-tab-left-pane #selectors-container #selectors-tab-content .selector-tab .item a#add-eobject-button.eobject:hover {
-								border: 5px dashed #0088cc;
-							}
-
-		#modes-container .modes-tab-pane #block-tab-right-pane #blockly-div {
-			margin-left: 200px;
-			position: absolute;
-			left: 0;
-			top: 0;
-			right: 20px;
-			bottom: 0;
-			-ms-touch-action: none;
+		#selectors-tab-content .selector-tab .item a {
+			text-decoration: none;
+			cursor: pointer;
+			font-size: 1.5em;
+			vertical-align: middle;
+			display: table-cell;
 		}
 
-			#modes-container .modes-tab-pane #block-tab-right-pane #blockly-div svg.blocklySvg {
-				overflow: hidden;
-			}
-
-		#modes-container .modes-tab-pane #text-editor {
+		#selectors-tab-content .selector-tab .item .item-info {
 			position: absolute;
 			left: 0;
 			top: 0;
 			right: 0;
 			bottom: 0;
-			font-size: 10pt;
+			width: 160px;
+			height: 160px;
+			color: gray;
 		}
 
+			#selectors-tab-content .selector-tab .item .item-info .name {
+				position: absolute;
+				left: 10px;
+				top: 10px;
+				font-size: 1em;
+				z-index: 1;
+			}
+
+			#selectors-tab-content .selector-tab .item .item-info .attributes {
+				position: absolute;
+				left: 10px;
+				bottom: 10px;
+				font-size: 0.8em;
+				line-height: 1.1em;
+				text-align: left;
+				z-index: 1;
+			}
+
+			#selectors-tab-content .selector-tab .item .item-info a.modify-button {
+				position: absolute;
+				right: 10px;
+				bottom: 10px;
+				padding-left: 0.5em;
+				padding-top: 0.5em;
+				font-size: 1.5em;
+				z-index: 1;
+			}
+
+			#selectors-tab-content .selector-tab .item .item-info .topright-buttons {
+				position: absolute;
+				right: 10px;
+				top: 10px;
+				padding-left: 0.5em;
+				padding-bottom: 0.5em;
+				z-index: 1;
+			}
+
+				#selectors-tab-content .selector-tab .item .item-info .topright-buttons > a {
+					font-size: 1.5em;
+				}
+
+		#selectors-tab-content .selector-tab .item a.celltype {
+			position: relative;
+			overflow: hidden;
+			display: table-cell;
+			text-align: center;
+			vertical-align: middle;
+			width: 170px;
+			height: 170px;
+			border: 5px solid white;
+		}
+
+			#selectors-tab-content .selector-tab .item a.celltype div {
+				margin: -5px;
+			}
+
+			#selectors-tab-content .selector-tab .item a.celltype img {
+				max-width: 160px;
+				max-height: 160px;
+			}
+
+			#selectors-tab-content .selector-tab .item a.celltype:hover {
+				border: 5px solid #0088cc;
+			}
+
+		#selectors-tab-content .selector-tab .item a#add-celltype-button.celltype {
+			text-align: center;
+			vertical-align: middle;
+			font-size: 1em;
+			border: 5px dashed lightgrey;
+		}
+
+			#selectors-tab-content .selector-tab .item a#add-celltype-button.celltype i {
+				font-size: 2em;
+			}
+
+			#selectors-tab-content .selector-tab .item a#add-celltype-button.celltype:hover {
+				border: 5px dashed #0088cc;
+			}
+
+#block-tab-left-pane {
+	position: relative;
+	height: 100%;
+	width: 100%;
+	float: left;
+}
+
+#block-tab-right-pane {
+	position: absolute;
+	height: 100%;
+	width: 100%;
+	float: right;
+}
+
+	#block-tab-right-pane .blockly-div {
+		margin-left: 220px;
+		position: absolute;
+		left: 0;
+		top: 0;
+		right: 0;
+		bottom: 0;
+		-ms-touch-action: none;
+	}
+
+		#block-tab-right-pane .blockly-div svg.blocklySvg {
+			overflow: hidden;
+		}
+
+#text-editor {
+	position: absolute;
+	left: 0;
+	top: 0;
+	right: 0;
+	bottom: 0;
+	font-size: 10pt;
+}
+
 #eobject-modal {
+	position: absolute;
 	top: 5%;
 	left: 5%;
 	width: 90%;
 	height: 90%;
-	overflow-y: scroll;
 }
 
 	#eobject-modal .modal-dialog {
@@ -259,74 +244,82 @@ html {
 		margin-bottom: 0px;
 	}
 
-	#eobject-modal .modal-body #eobject-modal-left-pane {
-		width: 45%;
-		margin-right: 8px;
-	}
-
-		#eobject-modal .modal-body #eobject-modal-left-pane #eobject-modal-preview {
-			position: relative;
-			width: 160px;
-			height: 160px;
-			background-color: white;
-			border: 1px solid gray;
-			overflow: hidden;
-			margin-bottom: 8px;
-		}
-
-			#eobject-modal .modal-body #eobject-modal-left-pane #eobject-modal-preview #eobject-modal-eobject {
-				position: absolute;
-				-ms-touch-action: none;
-			}
-
-				#eobject-modal .modal-body #eobject-modal-left-pane #eobject-modal-preview #eobject-modal-eobject img {
-					width: 100%;
-					height: 100%;
-				}
-
-		#eobject-modal .modal-body #eobject-modal-left-pane #eobject-modal-attributes #eobject-modal-form {
-			margin-bottom: 0;
-		}
-
-			#eobject-modal .modal-body #eobject-modal-left-pane #eobject-modal-attributes #eobject-modal-form .control-group {
-				margin-bottom: 8px;
-			}
-
-				#eobject-modal .modal-body #eobject-modal-left-pane #eobject-modal-attributes #eobject-modal-form .control-group .control-label {
-					width: 30%;
-				}
-
-				#eobject-modal .modal-body #eobject-modal-left-pane #eobject-modal-attributes #eobject-modal-form .control-group .dropdown {
-					display: inline-block;
-				}
-
-				#eobject-modal .modal-body #eobject-modal-left-pane #eobject-modal-attributes #eobject-modal-form .control-group .controls {
-					display: inline-flex;
-				}
-
-	#eobject-modal .modal-body #eobject-modal-right-pane {
-		width: 50%;
+	#eobject-modal .modal-body {
+		padding: 0px;
 		height: 480px;
-		margin-left: 50%;
-		margin-bottom: 10px;
 	}
 
-		#eobject-modal .modal-body #eobject-modal-right-pane #eobject-modal-right-pane-inner {
-			position: absolute;
-			left: 0;
-			top: 0;
-			right: 0;
-			bottom: 0;
-			overflow-y: scroll;
+#eobject-modal-preview {
+	position: relative;
+	width: 160px;
+	height: 160px;
+	background-color: white;
+	border: 1px solid gray;
+	overflow: hidden;
+	margin-bottom: 8px;
+}
+
+#eobject-modal-celltype {
+	position: absolute;
+	-ms-touch-action: none;
+}
+
+	#eobject-modal-celltype img {
+		width: 100%;
+		height: 100%;
+	}
+
+#eobject-modal-form {
+	margin-bottom: 0;
+}
+
+	#eobject-modal-form .control-group {
+		margin-bottom: 8px;
+	}
+
+		#eobject-modal-form .control-group .control-label {
+			width: 30%;
 		}
 
-			#eobject-modal .modal-body #eobject-modal-right-pane #eobject-modal-right-pane-inner #eobject_properties {
-				width: 100%;
-			}
+		#eobject-modal-form .control-group .dropdown {
+			display: inline-block;
+		}
 
-				#eobject-modal .modal-body #eobject-modal-right-pane #eobject-modal-right-pane-inner #eobject_properties label {
-					text-align: left;
-				}
+		#eobject-modal-form .control-group .controls {
+			display: inline-flex;
+		}
+
+#eobject-modal-left-pane {
+	position: relative;
+	height: 80%;
+	width: 50%;
+	float: left;
+}
+
+#eobject-modal-right-pane {
+	position: absolute;
+	margin-left: 50%;
+	height: 80%;
+	width: 50%;
+	float: left;
+}
+
+#eobject-modal-right-pane-inner {
+	left: 0;
+	top: 0;
+	right: 0;
+	bottom: 0;
+	height: 480px;
+	overflow-y: scroll;
+}
+
+#eobject_properties {
+	width: 100%;
+}
+
+	#eobject_properties label {
+		text-align: left;
+	}
 
 #preference-modal {
 	width: 700px;
@@ -355,10 +348,6 @@ div.emscripten {
 div.emscripten_border {
 	border: 1px solid black;
 }
-/* the canvas *must not* have any border or padding, or mouse coords will be wrong */
-canvas.emscripten {
-	border: 0px none;
-}
 
 #emscripten_logo {
 	display: inline-block;
@@ -383,6 +372,25 @@ canvas.emscripten {
 	border-top: 5px solid rgb(120, 120, 120);
 	border-radius: 100%;
 	background-color: rgb(189, 215, 46);
+}
+
+#emscripten-box {
+	position: absolute;
+	top: 0px;
+}
+
+#term-box {
+	position: relative;
+	height: 100%;
+}
+
+#term {
+	position: absolute;
+	top: 0;
+	right: 0;
+	bottom: 0;
+	left: 0;
+	font-size: small;
 }
 
 @-webkit-keyframes rotation {
@@ -445,17 +453,4 @@ canvas.emscripten {
 	vertical-align: top;
 	margin-top: 30px;
 	margin-right: 20px;
-}
-
-#output {
-	width: 100%;
-	height: 200px;
-	margin: 0 auto;
-	margin-top: 10px;
-	display: block;
-	background-color: black;
-	color: white;
-	font-family: courier-new, courier, monospace;
-	font-size: 12px;
-	outline: none;
 }
